fix: input size on mobile

--- a/src/components/RegisterForm/styles.css
+++ b/src/components/RegisterForm/styles.css
@@ -35,7 +35,7 @@ input {
     text-align: center !important;
   }
 
-  #_form_624617EEE942F_ .field5 input, #_form_624617EEE942F_ ._field3 input, #_form_624617EEE942F_ ._field4 input, #_form_624617EEE942F_ ._x28264061 input, #_form_624617EEE942F_ ._x84457384 input, #_form_624617EEE942F_ ._field2 input {
+  #_form_62476A2931A5A_ ._x84457384 input {
     width: 280px !important;
   }
 }
